fixed subject wrapping error in details

--- a/client/src/components/Details.scss
+++ b/client/src/components/Details.scss
@@ -39,11 +39,13 @@
 .subjects-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   text-align: start;
   margin: 1.2em 0;
 
   .book__subject-badge {
     margin-right: 5px;
+    margin-bottom: 5px;
     text-transform: capitalize;
   }
 }
